<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.registration.LoginActivity"
    android:gravity="center">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/img_registration"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_registration"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/DialogBackgroundStyle"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/DialogTitleTextView"
            android:text="@string/register_with_email"/>

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_email"
            style="@style/EditTextStyle"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_password"
            style="@style/EditTextStyle"/>

        <EditText
            android:id="@+id/repeatPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:layout_marginBottom="@dimen/margin"
            android:drawableStart="@drawable/ic_password"
            style="@style/EditTextStyle"/>

        <Button
            android:id="@+id/emailRegisterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_with_email"
            style="@style/CardButtonStyle"/>

    </LinearLayout>

</RelativeLayout>